Mark a few more replaced by loadable methods deprecated for removal
Just saves having dozens of overloads for everything, already wrote the overloads